--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.mvc.view.prefix=/views/
 spring.mvc.view.suffix=.jsp
 
 spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 server.error.include-binding-errors=always
 spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:h2:~/liquibase;DB_CLOSE_ON_EXIT=FALSE
