--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-binding-errors=always
 spring.jpa.hibernate.show-sql=true
-spring.datasource.url=jdbc:h2:~/liquibase;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.username=sa
-spring.datasource.password=
-spring.liquibase.change-log=classpath:mydatabase_changelog.xml
+spring.datasource.url=jdbc:postgresql://localhost:5432/car_rental
+spring.datasource.username=postgres
+spring.datasource.password=root
