--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.hibernate.show-sql=true
 spring.datasource.url=jdbc:postgresql://localhost:5432/car_rental
 spring.datasource.username=postgres
 spring.datasource.password=root
+
+nbp.api.rates.url=https://api.nbp.pl/api/exchangerates/rates/a/
