refactoring, rate service tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/car_rental
 spring.datasource.username=postgres
 spring.datasource.password=root
 
-nbp.api.rates.url=https://api.nbp.pl/api/exchangerates/rates/a/
+nbp.api.rates.url=https://api.nbp.pl/api/exchangerates/rates/a/{currency}
