added scheduler wchich changes car location after rent, changed database to h2 in tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ spring.datasource.username=postgres
 spring.datasource.password=root
 
 nbp.api.rates.url=https://api.nbp.pl/api/exchangerates/rates/a/{currency}
+
+schedule.car.location=0 0 0 ? * *
