refactoring, added remember me to login form and security config

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,3 +6,4 @@ spring.sql.init.mode=never
 
 schedule.car.location=0 0 0 ? * *
 nbp.api.rates.url=https://api.nbp.pl/api/exchangerates/rates/a/{currency}
+spring.security.rememberMe.durationInSeconds=2419200
