--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,5 @@ spring.sql.init.mode=always
 nbp.api.rates.url=https://api.nbp.pl/api/exchangerates/rates/a/{currency}
 
 schedule.car.location=0 0 0 ? * *
+
+spring.security.rememberMe.durationInSeconds=2419200
