--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -7,3 +7,18 @@ spring.sql.init.mode=never
 schedule.car.location=0 0 0 ? * *
 nbp.api.rates.url=https://api.nbp.pl/api/exchangerates/rates/a/{currency}
 spring.security.rememberMe.durationInSeconds=2419200
+
+car-rental.endpoint.home=/
+car-rental.endpoint.about=/about
+car-rental.endpoint.services=/services
+car-rental.endpoint.pricing=/pricing
+car-rental.endpoint.cars=/car
+car-rental.endpoint.contact=/contact
+car-rental.endpoint.login=/login
+car-rental.endpoint.logout=/logout
+car-rental.endpoint.register=/register
+car-rental.endpoint.myRentals=/my-rentals
+car-rental.endpoint.myAccount=/my-account
+car-rental.endpoint.editAccount=/edit-account
+car-rental.endpoint.carSelection=/car-selection
+car-rental.endpoint.carDetails=/car-details/{carId}
