added nbp rates cache ttl, cars and places cache

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 
 nbp.api.rates.url=https://api.nbp.pl/api/exchangerates/rates/a/{currency}
+cache.rates.ttl=300000
 
 schedule.car.location=0 0 0 ? * *
 
