--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -6,6 +6,7 @@ spring.sql.init.mode=never
 
 schedule.car.location=0 0 0 ? * *
 nbp.api.rates.url=https://api.nbp.pl/api/exchangerates/rates/a/{currency}
+cache.rates.ttl=300000
 spring.security.rememberMe.durationInSeconds=2419200
 
 car-rental.endpoint.home=/
