--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -30,5 +30,14 @@ car-rental.endpoint.register=/register
 car-rental.endpoint.myRentals=/my-rentals
 car-rental.endpoint.myAccount=/my-account
 car-rental.endpoint.editAccount=/edit-account
+car-rental.endpoint.editAccountByAdmin=/edit-account-by-admin
 car-rental.endpoint.carSelection=/car-selection
 car-rental.endpoint.carDetails=/car-details/{carId}
+car-rental.endpoint.maintenance=/maintenance
+car-rental.endpoint.rentalManagement=/rental-management
+car-rental.endpoint.accountManagement=/account-management
+car-rental.endpoint.placeManagement=/place-management
+car-rental.endpoint.carManagement=/car-management
+car-rental.endpoint.deleteAccount=/delete-account/{userNickname}
+car-rental.endpoint.deletePlace=/delete-place/{city}
+car-rental.endpoint.deleteCar=/delete-car/{carId}
