--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.mvc.view.prefix=/views/
+spring.mvc.view.prefix=/WEB-INF/view/
 spring.mvc.view.suffix=.jsp
 
 spring.jpa.show-sql=true
@@ -21,7 +21,6 @@ spring.security.rememberMe.durationInSeconds=2419200
 car-rental.endpoint.home=/
 car-rental.endpoint.about=/about
 car-rental.endpoint.services=/services
-car-rental.endpoint.pricing=/pricing
 car-rental.endpoint.cars=/car
 car-rental.endpoint.contact=/contact
 car-rental.endpoint.login=/login
