views refactor and added car edit

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -20,7 +20,7 @@ car-rental.endpoint.register=/register
 car-rental.endpoint.myRentals=/my-rentals
 car-rental.endpoint.myAccount=/my-account
 car-rental.endpoint.editAccount=/edit-account
-car-rental.endpoint.editAccountByAdmin=/edit-account-by-admin
+car-rental.endpoint.editAccountByAdmin=/edit-account-by-admin/{userNickname}
 car-rental.endpoint.carSelection=/car-selection
 car-rental.endpoint.carDetails=/car-details/{carId}
 car-rental.endpoint.maintenance=/maintenance
@@ -31,3 +31,4 @@ car-rental.endpoint.carManagement=/car-management
 car-rental.endpoint.deleteAccount=/delete-account/{userNickname}
 car-rental.endpoint.deletePlace=/delete-place/{city}
 car-rental.endpoint.deleteCar=/delete-car/{carId}
+car-rental.endpoint.editCar=/edit-car/{carId}
