added new tests

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,10 +19,10 @@ schedule.car.location=0 0 0 ? * *
 spring.security.rememberMe.durationInSeconds=2419200
 
 car-rental.endpoint.home=/
-car-rental.endpoint.about=/about
-car-rental.endpoint.services=/services
+car-rental.endpoint.about=/about-car-rental
+car-rental.endpoint.services=/car-rental-services
 car-rental.endpoint.cars=/car
-car-rental.endpoint.contact=/contact
+car-rental.endpoint.contact=/contact-car-rental
 car-rental.endpoint.login=/login
 car-rental.endpoint.logout=/logout
 car-rental.endpoint.register=/register
