--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -10,10 +10,10 @@ cache.rates.ttl=300000
 spring.security.rememberMe.durationInSeconds=2419200
 
 car-rental.endpoint.home=/
-car-rental.endpoint.about=/about
-car-rental.endpoint.services=/services
+car-rental.endpoint.about=/about-car-rental
+car-rental.endpoint.services=/car-rental-services
 car-rental.endpoint.cars=/car
-car-rental.endpoint.contact=/contact
+car-rental.endpoint.contact=/contact-car-rental
 car-rental.endpoint.login=/login
 car-rental.endpoint.logout=/logout
 car-rental.endpoint.register=/register
